--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.111.2",
     "@react-three/fiber": "^8.17.5",
+    "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.29",
     "maath": "^0.10.8",
     "react": "^18.3.1",
@@ -20,7 +22,8 @@
     "react-router-dom": "^6.26.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "verifalia": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
